[project]
name = "ambience-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gurkhaman", email = "25946015+gurkhaman@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
